Created class: SharedColorBandSetAdapter. ColorBandSet - OpenSaveViewModel and related are now working properly.

--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
+    <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
   </ItemGroup>
 
 </Project>
