--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -17,6 +17,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MapLoader\MapSectionHelperNotUsed.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="MapLoader\MapSectionHelperNotUsed.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.2.0" />
   </ItemGroup>
 
