--- a/src/ImageBuilder/ImageBuilder.csproj
+++ b/src/ImageBuilder/ImageBuilder.csproj
@@ -1,35 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Model\**" />
-    <EmbeddedResource Remove="Model\**" />
-    <None Remove="Model\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="MongoDbImporterNotUsed.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="MongoDbImporterNotUsed.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="System.Text.Json" Version="5.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
-    <ProjectReference Include="..\MSetOldTypes\MSetOldTypes.csproj" />
-    <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
     <ProjectReference Include="..\PngImageLib\PngImageLib.csproj" />
   </ItemGroup>
 
