--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -23,6 +23,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\ImageBuilder\ImageBuilder.csproj" />
     <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
   </ItemGroup>
