--- a/src/MSetExplorer/Properties/Settings.settings
+++ b/src/MSetExplorer/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="ShowTopNav" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="DefaultOutputFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\_MandelbrotSetImages</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
