--- a/src/MSetExplorer/Properties/Settings.settings
+++ b/src/MSetExplorer/Properties/Settings.settings
@@ -3,10 +3,13 @@
   <Profiles />
   <Settings>
     <Setting Name="ShowTopNav" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DefaultOutputFolderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\_MandelbrotSetImages</Value>
+    </Setting>
+    <Setting Name="LastWindowName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
