Updated the MapSectionService to fetch the ZValues to avoid having the MEngine Client send (and receive them.)

--- a/src/MSetExplorer/Properties/Settings.settings
+++ b/src/MSetExplorer/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ShowTopNav" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="LastWindowName" Type="System.String" Scope="User">
       <Value Profile="(Default)">Designer</Value>
