--- a/src_FGEN/MEngineService/MEngineService.csproj
+++ b/src_FGEN/MEngineService/MEngineService.csproj
@@ -21,7 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
+    <ProjectReference Include="..\..\src\MSetRepo\MSetRepo.csproj" />
+    <ProjectReference Include="..\..\src\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
