Added logging to the MEngineService. Continue to work on the XSamplingEditor

--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Test.cpp">
+    <ClCompile Include="MSetGen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="qp.cpp">
