--- a/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
+++ b/src_FGEN/MSetGenerator/MSetGenerator.vcxproj
@@ -206,7 +206,7 @@
     <ClCompile Include="qpParser.cpp" />
     <ClCompile Include="SizeDd.cpp" />
     <ClCompile Include="SizeInt.cpp" />
-    <ClCompile Include="Test.cpp" />
+    <ClCompile Include="MSetGen.cpp" />
     <ClCompile Include="twoProd.cpp" />
     <ClCompile Include="twoSum.cpp" />
     <ClCompile Include="vHelper.cpp" />
