Continue to work on the JobTree

--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <Compile Remove="BigIntegerExtensions.cs" />
+    <Compile Remove="MSet\JobTreeOld.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="MSet\JobTreeOld.cs" />
   </ItemGroup>
 
   <ItemGroup>
