Created new MapSectionGeneratorLib project to allow the MSetGen native methods to be called without using the gRPC-based MEngineService.

--- a/src_FGEN/MEngineService/MEngineService.csproj
+++ b/src_FGEN/MEngineService/MEngineService.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\MapSectionGeneratorLib\MapSectionGeneratorLib.csproj" />
     <ProjectReference Include="..\..\src\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\..\src\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\..\src\MSetRepo\MSetRepo.csproj" />
