Added support for calling the C code back-end directly without going through the gRCP client/server.

--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImageBuilder\ImageBuilder.csproj" />
+    <ProjectReference Include="..\MapSectionGeneratorLib\MapSectionGeneratorLib.csproj" />
     <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
