--- a/src_FGEN/MSetGeneratorTest/MSetGeneratorTest.vcxproj.filters
+++ b/src_FGEN/MSetGeneratorTest/MSetGeneratorTest.vcxproj.filters
@@ -15,13 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="IntrinsicTests.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <CustomBuild Include="IntrinsicTests.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="SampleTests.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="HeadersToTest.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TestRunner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
