The SmxMathHelper is performing arbitrary precision multiplication and rounding.

--- a/src/EngineTest/EngineTest.csproj
+++ b/src/EngineTest/EngineTest.csproj
@@ -23,4 +23,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MSetGenP\MSetGenP.csproj" />
+    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
+  </ItemGroup>
+
 </Project>
