SmxMathHelper now does addition and subtraction. Also created class: MapSectionGeneratorSerial as a POC in C# for a new IMEngine implementation and a new IMEngineClient implementation: MClientLocal that will call it.

--- a/src/MapSectionGeneratorLib/MapSectionGeneratorLib.csproj
+++ b/src/MapSectionGeneratorLib/MapSectionGeneratorLib.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
     <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
+    <ProjectReference Include="..\MSetGenP\MSetGenP.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
