Created project: MSetGeneratorPrototype to hold the 'next gen' version of the VecMath2C library. Moved classes from the MSetGenP Types folder to the MSS.Common project in the new folder: APValues. Moved the ScalarMathHelper and ScalerMathFloatingHelper to the MSS.Common project.

--- a/src/MSetGenP/MSetGenP.csproj
+++ b/src/MSetGenP/MSetGenP.csproj
@@ -15,13 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Math\VecMathExp2C.cs" />
     <Compile Remove="SimdSamples.cs" />
-    <Compile Remove="Types\M256IntData.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Math\VecMathExp2C.cs" />
     <None Include="SimdSamples.cs" />
-    <None Include="Types\M256IntData.cs" />
   </ItemGroup>
 
   <ItemGroup>
