--- a/src/MSetGenP/MSetGenP.csproj
+++ b/src/MSetGenP/MSetGenP.csproj
@@ -15,6 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="SimdSamples.cs" />
   </ItemGroup>
 
