Move the 'old' Smx classes to their own namespace

--- a/src/MSS.Types/MSS.Types.csproj
+++ b/src/MSS.Types/MSS.Types.csproj
@@ -11,5 +11,9 @@
     <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="APValues\" />
+  </ItemGroup>
+
 
 </Project>
