--- a/src/MSetGenPTest/MSetGenPTest.csproj
+++ b/src/MSetGenPTest/MSetGenPTest.csproj
@@ -27,6 +27,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MapSectionGeneratorSerialTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="MapSectionGeneratorSerialTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
