Refactored MapSectionGeneratorSimd. No longer using the SubSectionGenerator class.

--- a/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
+++ b/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SamplePointValues.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="SamplePointValues.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
 
