--- a/src/MSetGeneratorPrototypeTest/MSetGeneratorPrototypeTest.csproj
+++ b/src/MSetGeneratorPrototypeTest/MSetGeneratorPrototypeTest.csproj
@@ -11,6 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="VecMath9Test.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="VecMath9Test.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
