Moved the classes from the MSS.Common/SmxVals folder to the MSetGenP project.

--- a/src/MSetGeneratorPrototypeTest/MSetGeneratorPrototypeTest.csproj
+++ b/src/MSetGeneratorPrototypeTest/MSetGeneratorPrototypeTest.csproj
@@ -11,10 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TestValueClasses\FP31DeckTestValue.cs" />
     <Compile Remove="VecMath9Test.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="TestValueClasses\FP31DeckTestValue.cs" />
     <None Include="VecMath9Test.cs" />
   </ItemGroup>
 
