--- a/src/MSS.Common/MSS.Common.csproj
+++ b/src/MSS.Common/MSS.Common.csproj
@@ -38,4 +38,8 @@
     <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SmxVals\" />
+  </ItemGroup>
+
 </Project>
