Moved the APValue types from MSS.Common to MSS.Types

--- a/src/MSS.Common/MSS.Common.csproj
+++ b/src/MSS.Common/MSS.Common.csproj
@@ -19,13 +19,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="APValues\SpanClassExp.cs" />
     <Compile Remove="RMap\JobHelperNotUsed.cs" />
     <Compile Remove="RMap\RMapHelperOldMethods.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="APValues\SpanClassExp.cs" />
     <None Include="RMap\RMapHelperOldMethods.cs" />
   </ItemGroup>
 
@@ -39,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="APValues\" />
     <Folder Include="SmxVals\" />
   </ItemGroup>
 
