Updated the MapSectionGeneratorDepthFirst to have two methods for row processing: Generator and Update. Created the MSetGeneratorLib project.

--- a/src/MSetGeneratorLib/MSetGeneratorLib.csproj
+++ b/src/MSetGeneratorLib/MSetGeneratorLib.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\cpp_src\HpMbGenerator\HpMbGenerator.vcxproj" />
+    <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
+    <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
+    <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
+    <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
+  </ItemGroup>
 
 </Project>
