Replaced HpMbGenerator (static lib) with HpMSetGenerator (.dll) and udpated the MapSectionGenerator class in the MSetGeneratorLib to call this cpp via PInvoke.

--- a/src/MSetExplorer/Properties/launchSettings.json
+++ b/src/MSetExplorer/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MSetExplorer": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "nativeDebugging": true
     }
   }
 }
