--- a/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
+++ b/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
@@ -23,10 +23,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="HpMbGenerator.cpp">
+    <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MSetGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
