Created the method signatures for fp31VecMap.cpp

--- a/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
+++ b/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="MSetGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Iterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="fp31VecMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Iterator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
