--- a/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj
+++ b/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClInclude Include="fp31VecMath.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Iterator.h" />
     <ClInclude Include="MSetGenerator.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="VecHelper.h" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="fp31VecMath.cpp" />
+    <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="MSetGenerator.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
