--- a/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
+++ b/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="Iterator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="simd_aligned_allocator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
