Created Test Project: MSetRowGeneratorClientTest

--- a/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
+++ b/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MSetGeneratorLib\MSetGeneratorLib.csproj" />
+    <ProjectReference Include="..\MSetRowGeneratorClient\MSetRowGeneratorClient.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
 
