--- a/src/MSetRowGeneratorClient/MSetRowGeneratorClient.csproj
+++ b/src/MSetRowGeneratorClient/MSetRowGeneratorClient.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\cpp_src\HpMSetGenerator\HpMSetGenerator.vcxproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
     <ProjectReference Include="..\MSS.Types\MSS.Types.csproj" />
   </ItemGroup>
