--- a/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj
+++ b/cpp_src/HpMSetGenerator/HpMSetGenerator.vcxproj
@@ -158,8 +158,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="simd_aligned_allocator.cpp">
-      <FileType>Text</FileType>
+    <ClCompile Include="simd_aligned_allocator.h">
+      <FileType>CppCode</FileType>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
