--- a/src/MSetExplorer/Properties/launchSettings.json
+++ b/src/MSetExplorer/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "MSetExplorer": {
       "commandName": "Project",
-      "nativeDebugging": true
+      "nativeDebugging": true,
+      "hotReloadEnabled": false
     }
   }
 }
