Updated the FP31VecMath class to reduce the number of method calls during Multiplication.

--- a/src/MSetExplorer/Properties/launchSettings.json
+++ b/src/MSetExplorer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MSetExplorer": {
       "commandName": "Project",
-      "nativeDebugging": true,
+      "nativeDebugging": false,
       "hotReloadEnabled": false
     }
   }
