--- a/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
+++ b/src/MSetGeneratorPrototype/MSetGeneratorPrototype.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <DefineConstants>$(DefineConstants);PERF</DefineConstants>
+    <DefineConstants>$(DefineConstants);</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
