Created project: WpfDisplayPOC. Upgraded MongoDb to 2.18.0.

--- a/src/MEngineDataContracts/MEngineDataContracts.csproj
+++ b/src/MEngineDataContracts/MEngineDataContracts.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+    <PackageReference Include="MongoDB.Bson" Version="2.18.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="protobuf-net.Grpc" Version="1.0.152" />
   </ItemGroup>
 
