--- a/src/WpfDisplayPOC/WpfDisplayPOC.csproj
+++ b/src/WpfDisplayPOC/WpfDisplayPOC.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.2.0" />
     <PackageReference Include="SkiaSharp" Version="2.88.3" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
