The SkiaStarFieldNoBlock window is working. Created project: WpfMapDisplayPOC. Removed the project dependency: MEngineDataContracts from the MSS.Common project.

--- a/src/MEngineClient/MEngineClient.csproj
+++ b/src/MEngineClient/MEngineClient.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MEngineDataContracts\MEngineDataContracts.csproj" />
     <ProjectReference Include="..\MSetGeneratorPrototype\MSetGeneratorPrototype.csproj" />
     <ProjectReference Include="..\MSS.Common\MSS.Common.csproj" />
   </ItemGroup>
