--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -13,9 +13,18 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <Compile Remove="XPoc\SkiaSharpPOC\SkiaControl.cs" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="XPoc\SkiaSharpPOC\SkiaControl.cs" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.2.0" />
-    <PackageReference Include="SkiaSharp" Version="2.88.3" />
   </ItemGroup>
 
 
