--- a/src/WpfMapDisplayPOC/WpfMapDisplayPOC.csproj
+++ b/src/WpfMapDisplayPOC/WpfMapDisplayPOC.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MapSectionProviderLib\MapSectionProviderLib.csproj" />
+    <ProjectReference Include="..\MEngineClient\MEngineClient.csproj" />
     <ProjectReference Include="..\MSetRepo\MSetRepo.csproj" />
   </ItemGroup>
 
