Began moving the logic to create a MapAreaInfo for a subset (aka view) of a large Map (aka Poster) from the PosterViewModel into the MapSectionDisplayViewModel.

--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Compile Remove="MapDisplay\Controls\MapDisplayControl.xaml.cs" />
     <Compile Remove="MapDisplay\Controls\MapDisplayViewModel.cs" />
+    <Compile Remove="MapDisplay\ScrollAndZoom\MapScrollViewModel.cs" />
     <Compile Remove="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
 
@@ -27,6 +28,7 @@
 
 
   <ItemGroup>
+    <None Include="MapDisplay\ScrollAndZoom\MapScrollViewModel.cs" />
     <None Include="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
 
