--- a/src/MSetExplorer/MSetExplorer.csproj
+++ b/src/MSetExplorer/MSetExplorer.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Compile Remove="MapDisplay\Controls\MapDisplayControl.xaml.cs" />
     <Compile Remove="MapDisplay\Controls\MapDisplayViewModel.cs" />
+    <Compile Remove="MapDisplay\Controls\MapSectionDisplayViewModel.cs" />
     <Compile Remove="MapDisplay\ScrollAndZoom\MapScrollViewModel.cs" />
     <Compile Remove="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
@@ -28,6 +29,7 @@
 
 
   <ItemGroup>
+    <None Include="MapDisplay\Controls\MapSectionDisplayViewModel.cs" />
     <None Include="MapDisplay\ScrollAndZoom\MapScrollViewModel.cs" />
     <None Include="XPoc\SkiaSharpPOC\SkiaControl.cs" />
   </ItemGroup>
